# hypergrep

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RESEARCH.md  SECURITY.md  hypergrep-installer.sh  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
agent-config/: .cursorrules  .windsurfrules  CLAUDE.md
crates/hypergrep-cli/: Cargo.toml
crates/hypergrep-cli/src/: main.rs
crates/hypergrep-core/: Cargo.toml
crates/hypergrep-core/src/: bloom.rs  graph.rs  index.rs  lib.rs  mental_model.rs  persist.rs  posting.rs  prefetch.rs  semantic.rs  structure.rs  trigram.rs  walker.rs
crates/hypergrep-core/tests/: production.rs
crates/hypergrep-daemon/: Cargo.toml
crates/hypergrep-daemon/src/: main.rs  watcher.rs
docs/: blogpost.md  index.html
