[package]
name = "hypergrep-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hypergrep"
path = "src/main.rs"

[dependencies]
hypergrep-core = { path = "../hypergrep-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
termcolor = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
