[package]
name = "hypergrep-core"
version.workspace = true
edition.workspace = true

[dependencies]
regex = "1"
regex-syntax = "0.8"
memmap2 = "0.9"
ignore = "0.4"
rayon = "1"
bincode = "2.0.0-rc.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
bstr = "1"
tracing = "0.1"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"

[dev-dependencies]
tempfile = "3"
