[package]
name = "hypergrep-core"
version.workspace = true
edition.workspace = true

[dependencies]
regex = "1"
regex-syntax = "0.8"
memmap2 = "0.9"
ignore = "0.4"
rayon = "1"
bincode = "2.0.0-rc.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
bstr = "1"
tracing = "0.1"
tree-sitter = "0.26"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-c-sharp = "0.23"
tree-sitter-scala = "0.25"
tree-sitter-lua = "0.5"
tree-sitter-zig = "1.1"
tree-sitter-bash = "0.25"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-hcl = "1.1"

[dev-dependencies]
tempfile = "3"
