[package]
name = "hypergrep-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hypergrep-daemon"
path = "src/main.rs"

[dependencies]
hypergrep-core = { path = "../hypergrep-core" }
tokio = { version = "1", features = ["full"] }
notify = "7"
notify-debouncer-full = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
